Java: The Long(long) constructor has become deprecated. (dm)